@startuml
Solution41 o-- FileReaderForNames
Solution41 o-- FileWriterForNames
FileReaderForNames <|-- AbstractFileAccessorForNames
FileWriterForNames <|-- AbstractFileAccessorForNames
class Solution41 {
    private static final Path rootPath = "$PROJECT_DIR$"
}

class AbstractFileAccessorForNames {
    protected File fileToAccess;
    protected List<String> arrayListToAccess;
}

class FileReaderForNames {
    public void readFromFile()
}

class FileWriterForNames {
    public void writeToFile()
}
@enduml